--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,6 +35,12 @@ jobs:
             dingtalk_token: DINGTALK_TOKEN4
             pushplus_token: PUSHPLUS_TOKEN4
             serverchan_key: SERVERCHAN_KEY4
+            #5:doc.wtx
+          - username: ZJU_USERNAME5
+            password: ZJU_PASSWORD5
+            dingtalk_token: DINGTALK_TOKEN5
+            pushplus_token: PUSHPLUS_TOKEN5
+            serverchan_key: SERVERCHAN_KEY5
     steps:
       - name: Working
         uses: Long0x0/zju-ncov-hitcarder@master
